# 0.00.22 (65314) Jun 19, 2012
6/19/12 Deploying updated version to dev for upcoming interviews.
Consolidated code for messenger RNA and the fragments produced.  This resulted in a change to the look of the mRNA fragments.
Cleaned up TODOs in the code.
Changed sliders to use a different knob - one that looks more professional.
Changed the way parameters are grouped on the 3rd tab to be more oriented towards function (e.g. "Affinity") instead of biomolecule (e.g. "Transcription Factors").
# 0.00.21 (63741) Apr 25, 2012
4/25/12 Deploying to dev for testing and review.
Changed the layout on the 3rd tab so that clock control, reset button, and "Show Cells" button are now on the left.
Changed the parameter controllers on the 3rd tab to be in groups.
Changed the way the cells on the 3rd tab are added so that they fit between the controller at the top and the chart at the bottom.
Moved the control on the 3rd tab that sets the number of cells to the top center, removed the caption.
Changed the shape of the fluorescent protein on the 3rd tab to approximate the shape of real green fluorescent protein.
# 0.00.20 (63446) Apr 16, 2012
4/16/12 Deploying to dev to enable the design team to review some changes.
Changed the biomolecule tool box such that it leaves a faded version of the biomolecule behind as a sort of legend.
Fixed an issue where the biomolecules could end up moving outside of their motion bounds when attaching to a base pair on the DNA molecule.
# 0.00.19 (62767) Mar 23, 2012
3/23/12 Deploying to dev for review
Made changes to motion strategies and bounds in order to make the rate of transcription a little higher on the 2nd tab.
Changed the way that polymerase is recycled such that it can be relocated either above or below the DNA when returned to the beginning of the transcribed region.
Changed the motion bounds on both the 1st and 2nd tabs so that molecules are allowed to move below the DNA.
Fixed layout for HorizontalSliderWithLabelAtEnds, see #3255